--- a/src/app/security-module/user/components/user-form/user-form.component.html
+++ b/src/app/security-module/user/components/user-form/user-form.component.html
@@ -23,7 +23,7 @@
               <mat-label>Apellidos:</mat-label>
               <input matInput formControlName="last_name" />
               <mat-error *ngIf="lastNameControl.errors?.required"> {{ 'El apellido es' }} <strong>requerido</strong> </mat-error>
-              <mat-error *ngIf="lastNameControl.errors?.pattern"> {{ 'El apelido solo permite letras y espacios' }} </mat-error>
+              <mat-error *ngIf="lastNameControl.errors?.pattern"> {{ 'El apellido solo permite letras y espacios' }} </mat-error>
             </mat-form-field>
           </div>
 
@@ -253,14 +253,14 @@
             </mat-form-field>
           </div>
 
-             <!-- grupo sanguineo -->
+          <!-- grupo sanguineo -->
           <div class="col-lg-3 col-md-12">
             <mat-form-field class="w-100" appearance="outline">
               <mat-label>Grupo Sanguíneo:</mat-label>
               <mat-select formControlName="grupo_sanguineo">
                 <mat-option *ngFor="let bloodType of bloodTypes" [value]="bloodType.id">{{ bloodType.descripcion }}</mat-option>
-               </mat-select>
-               <mat-error *ngIf="personFormGroup.controls['grupo_sanguineo'].errors?.required">{{ 'Seleccione un grupo sanguíneo' }}</mat-error>
+              </mat-select>
+              <mat-error *ngIf="personFormGroup.controls['grupo_sanguineo'].errors?.required">{{ 'Seleccione un grupo sanguíneo' }}</mat-error>
             </mat-form-field>
           </div>
         </div>
@@ -297,7 +297,11 @@
               </ng-select>
               <small
                 class="text-danger error-style"
-                *ngIf="personFormGroup.controls['municipio'].errors?.required && (personFormGroup.controls['municipio'].touched || personFormGroup.controls['municipio'].pristine )">
+                *ngIf="
+                  personFormGroup.controls['municipio'].errors?.required &&
+                  (personFormGroup.controls['municipio'].touched || personFormGroup.controls['municipio'].pristine)
+                "
+              >
                 El distrito es <strong>requerido</strong></small
               >
             </div>
@@ -313,9 +317,9 @@
 
             <!-- barrio -->
             <div class="col-lg-6 col-md-12">
-             <mat-form-field class="w-100" appearance="outline">
-               <mat-label>Barrio:</mat-label>
-               <input matInput formControlName="barrio" />
+              <mat-form-field class="w-100" appearance="outline">
+                <mat-label>Barrio:</mat-label>
+                <input matInput formControlName="barrio" />
               </mat-form-field>
             </div>
 
@@ -376,7 +380,7 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono de Emergencia:</mat-label>
-                <input matInput formControlName="telefono_emergencia"  matTooltip="+(240) ### ######" />
+                <input matInput formControlName="telefono_emergencia" matTooltip="+(240) ### ######" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_emergencia'].errors?.required">
                   {{ 'El Teléfono de Emergencia es ' }} <strong>requerido</strong>
                 </mat-error>
@@ -390,7 +394,7 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono de casa:</mat-label>
-                <input matInput formControlName="telefono_casa"  matTooltip="+(240) ### ######" />
+                <input matInput formControlName="telefono_casa" matTooltip="+(240) ### ######" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_casa'].errors?.required">
                   {{ 'El Teléfono de casa es ' }} <strong>requerido</strong>
                 </mat-error>
@@ -403,7 +407,7 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono del Trabajo:</mat-label>
-                <input matInput formControlName="telefono_trabajo"  matTooltip="+(240) ### ######" />
+                <input matInput formControlName="telefono_trabajo" matTooltip="+(240) ### ######" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_trabajo'].errors?.required">
                   {{ 'El Teléfono del trabajo es' }} <strong>requerido</strong>
                 </mat-error>
@@ -417,7 +421,7 @@
             <div class="col-lg-6 col-md-12">
               <mat-form-field class="w-100" appearance="outline">
                 <mat-label>Teléfono móvil:</mat-label>
-                <input matInput formControlName="telefono_movil"  matTooltip="+(240) ### ######" />
+                <input matInput formControlName="telefono_movil" matTooltip="+(240) ### ######" />
                 <mat-error *ngIf="personFormGroup.controls['telefono_movil'].errors?.required">
                   {{ 'El Teléfono móvil es' }} <strong>requerido</strong>
                 </mat-error>
