Arreglando Ortografia en CRUD Existence

--- a/src/app/stock-modules/existence/components/existence-form/existence-form.component.html
+++ b/src/app/stock-modules/existence/components/existence-form/existence-form.component.html
@@ -45,7 +45,7 @@
             <ng-select appearance="outline" class="custom w-100" placeholder="Lote" [items]="lote"
                 bindLabel="descripcion" bindValue="id" formControlName="lote">
             </ng-select>
-            <small class="text-danger error-style" *ngIf="loteControl.errors?.required">La
+            <small class="text-danger error-style" *ngIf="loteControl.errors?.required">El
                 Lote es <strong>requerido</strong></small>
         </div>
 
