--- a/src/app/resources-modules/aftselfresources/pages/aftselfresources-page/aftselfresources-page.component.html
+++ b/src/app/resources-modules/aftselfresources/pages/aftselfresources-page/aftselfresources-page.component.html
@@ -15,6 +15,6 @@
     [loading]="loading"
     (changePage)="onChangePage($event)"
     (changeFilter)="onChangeFilter($event)"
-    (changeSort)="changeSort($event)"
+    (changeSort)="onChangeSort($event)"
   ></app-custom-table>
 </div>
