--- a/src/app/stock-modules/facture/components/facture-form/facture-form.component.html
+++ b/src/app/stock-modules/facture/components/facture-form/facture-form.component.html
@@ -5,6 +5,7 @@
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Número Factura:</mat-label>
       <input matInput formControlName="nro_factura" />
+      <mat-error *ngIf="this.nrofacturaControl.errors?.required"> {{ 'El número de Factura es' }} <strong>requerido</strong>  </mat-error>
    </mat-form-field>
     <div class="col-lg-6 col-md-12">
       <mat-form-field class="w-100" appearance="outline">
@@ -20,9 +21,9 @@
     <div class="col-lg-6 col-md-12">
       <mat-form-field class="w-100" appearance="outline">
         <mat-label>Fecha de Entrega</mat-label>
-        <input matInput formControlName="fecha_entrega" [matDatepicker]="picker" />
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <input matInput formControlName="fecha_entrega" [matDatepicker]="picker1" />
+        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+        <mat-datepicker #picker1></mat-datepicker>
         <mat-error *ngIf="entregaControl.errors?.required">
           {{ 'La fecha de entrega es ' }} <strong>requerida</strong>
         </mat-error>
@@ -30,7 +31,7 @@
     </div>
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Importe Total:</mat-label>
-      <input matInput formControlName="cantidad_maquina" />
+      <input matInput formControlName="importe_total" />
       <mat-error *ngIf="this.importeTotalControl.errors?.required"> {{ 'El importe total es' }} <strong>requerido</strong>  </mat-error>
     </mat-form-field>
     <mat-form-field class="w-100" appearance="outline">
@@ -92,7 +93,7 @@
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
-    <button (click)="onSubmit(factureForm.value)" [disabled]="!factureForm.valid" mat-raised-button color="primary" class="button">
+    <button color="primary" mat-raised-button mat-button [disabled]="!factureForm.valid" (click)="sendData()">
       {{ data.facture ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
