--- a/src/app/stock-modules/servicesstock/components/servicesstock-form/servicesstock-form.component.html
+++ b/src/app/stock-modules/servicesstock/components/servicesstock-form/servicesstock-form.component.html
@@ -2,67 +2,49 @@
   <h4>{{ data.servicesstock ? 'Editar Servicio Almacen' : 'Crear Servicio Almacen' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="servicesstockForm" [formGroup]="servicesstockForm">
-    <!-- codigo": "micubs",
-    "nombre": "dios",
-    "precio": 20.0,
-    "impuesto": 1,
-    "usuario": 1,
-    "departamento -->
     <mat-form-field class="w-100" appearance="outline">
-      <mat-label>Codigo:</mat-label>
-      <input matInput formControlName="codigo" />
-      <mat-error *ngIf="codecControl.errors?.required"> {{ 'La codigo es' }} <strong>requerido</strong>  </mat-error>
-   </mat-form-field>
-    <mat-form-field class="w-100" appearance="outline">
-      <mat-label>Precio:</mat-label>
-      <input matInput formControlName="precio" />
-      <mat-error *ngIf="priceControl.errors?.required"> {{ 'El precio  es' }} <strong>requerido</strong>  </mat-error>
+      <mat-label>Código</mat-label>
+      <input matInput formControlName="codigo" maxlength="50" />
+      <mat-error *ngIf="codecControl.errors?.required"> {{ 'El código es' }} <strong>requerido</strong> </mat-error>
     </mat-form-field>
+
     <mat-form-field class="w-100" appearance="outline">
-      <mat-label>Nombre:</mat-label>
-      <input matInput formControlName="nombre" />
-      <mat-error *ngIf="nameControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong>  </mat-error>
+      <mat-label>Nombre</mat-label>
+      <input matInput formControlName="nombre" maxlength="20" />
+      <mat-error *ngIf="nameControl.errors?.required"> {{ 'El nombre es' }} <strong>requerido</strong> </mat-error>
     </mat-form-field>
-    <div class="mb-4">
-      <ng-select
-        appearance="outline"
-        class="custom w-100"
-        placeholder="Impuesto"
-        [items]="impuesto"
-        bindLabel="descripcion"
-        bindValue="id"
-        formControlName="impuesto">
-      </ng-select>
-      <small class="text-danger error-style" *ngIf="impuestoControl.errors?.required && impuestoControl.dirty">
-        El campo impuesto es <strong>requerido</strong></small>
-    </div>  <!-- user -->
-  <div class="mb-4">
-    <ng-select
-      appearance="outline"
-      class="custom w-100"
-      placeholder="Usuario"
-      [items]="usuario"
-      bindLabel="username"
-      bindValue="id"
-      formControlName="usuario">
-    </ng-select>
-    <small class="text-danger error-style" *ngIf="userControl.errors?.required && userControl.dirty">
-      El campo usuario es <strong>requerido</strong></small>
-  </div>
-   <!-- Almacen -->
-   <div class="mb-4">
-    <ng-select
-      appearance="outline"
-      class="custom w-100"
-      placeholder="Departamento"
-      [items]="departamento"
-      bindLabel="nombre"
-      bindValue="id"
-      formControlName="departamento">
-    </ng-select>
-    <small class="text-danger error-style" *ngIf="officeControl.errors?.required && officeControl.dirty">
-      El campo departamento es <strong>requerido</strong></small>
-  </div>
+
+    <mat-form-field class="w-100" appearance="outline">
+      <mat-label>Precio</mat-label>
+      <input matInput formControlName="precio" maxlength="20" />
+      <mat-error *ngIf="priceControl.errors?.required"> {{ 'El precio es' }} <strong>requerido</strong> </mat-error>
+      <mat-error *ngIf="priceControl.errors?.isDecimal"> {{ 'El precio es' }} <strong>solo números enteros o decimales</strong> </mat-error>
+    </mat-form-field>
+
+    <mat-form-field class="w-100" appearance="outline">
+      <mat-label>Impuesto</mat-label>
+      <mat-select #mySelect formControlName="impuesto">
+        <mat-option *ngFor="let tax of impuesto" [value]="tax.id">{{ tax.descripcion }}</mat-option>
+      </mat-select>
+      <mat-error *ngIf="taxControl.errors?.required"> {{ 'Seleccione un impuesto' }} </mat-error>
+    </mat-form-field>
+
+    <mat-form-field class="w-100" appearance="outline">
+      <mat-label>Usuario</mat-label>
+      <mat-select #mySelect formControlName="usuario">
+        <mat-option *ngFor="let user of usuario" [value]="user.id">{{ user.username }}</mat-option>
+      </mat-select>
+      <mat-error *ngIf="userControl.errors?.required"> {{ 'Seleccione un usuario' }} </mat-error>
+    </mat-form-field>
+
+    <mat-form-field class="w-100" appearance="outline">
+      <mat-label>Departamento</mat-label>
+      <mat-select #mySelect formControlName="departamento" multiple>
+        <mat-option *ngFor="let office of departamento" [value]="office.id">{{ office.nombre }}</mat-option>
+      </mat-select>
+      <mat-error *ngIf="officeControl.errors?.required"> {{ 'Seleccione un departamento' }} </mat-error>
+    </mat-form-field>
+
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
