--- a/src/app/stock-modules/servicesstock/pages/servicesstock-page/servicesstock-page.component.html
+++ b/src/app/stock-modules/servicesstock/pages/servicesstock-page/servicesstock-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Servicio Almacen</h4>
-    <button (click)="createServicesstock()" mat-raised-button color="primary" class="button">Servicio Almacen</button>
+    <h4>Servicio Almacén</h4>
+    <button (click)="createServicesstock()" mat-raised-button color="primary" class="button">Servicio Almacén</button>
   </div>
   <app-custom-table
     *ngIf="servicesstock"
