--- a/src/app/stock-modules/sale-facture/pages/sale-facture-page/sale-facture-page.component.html
+++ b/src/app/stock-modules/sale-facture/pages/sale-facture-page/sale-facture-page.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Factura</h4>
-    <button (click)="createFacture()" mat-raised-button color="primary" class="button">Crear Factura</button>
+    <h4>Factura de Venta</h4>
+    <button (click)="createSaleFacture()" mat-raised-button color="primary" class="button">Crear Factura de Venta</button>
   </div>
   <app-custom-table
-    *ngIf="facture"
-    [data]="facture"
+    *ngIf="salaFacture"
+    [data]="saleFacture"
     [dataCount]="dataCount"
     [displayedColumns]="configuration.displayedColumns"
     [columnsName]="configuration.columnsName"
