--- a/src/app/stock-modules/sale-facture/components/sale-facture-form/sale-facture-form.component.html
+++ b/src/app/stock-modules/sale-facture/components/sale-facture-form/sale-facture-form.component.html
@@ -2,11 +2,27 @@
   <h4>{{ data.saleFacture ? 'Editar Factura de Venta' : 'Crear Factura de Venta' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="saleFactureForm" [formGroup]="saleFactureForm">
+    <div class="row">
+      <div class="col-lg-4 col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Número Factura:</mat-label>
       <input matInput formControlName="nro_factura" />
       <mat-error *ngIf="this.nrofacturaControl.errors?.required"> {{ 'El número de Factura es' }} <strong>requerido</strong>  </mat-error>
    </mat-form-field>
+   </div>
+   <div class="col-lg-4 col-md-12">
+   <mat-form-field class="w-100" appearance="outline">
+    <mat-label>Importe Total:</mat-label>
+    <input matInput formControlName="importe_total" />
+    <mat-error *ngIf="this.importeTotalControl.errors?.required"> {{ 'El importe total es' }} <strong>requerido</strong>  </mat-error>
+  </mat-form-field>
+</div>
+<div class="col-lg-4 col-md-12">
+  <mat-form-field class="w-100" appearance="outline">
+    <mat-label>Descuento:</mat-label>
+    <input matInput formControlName="descuento" />
+  </mat-form-field>
+</div>
     <div class="col-lg-6 col-md-12">
       <mat-form-field class="w-100" appearance="outline">
         <mat-label>Fecha de Emisióm</mat-label>
@@ -29,24 +45,20 @@
         </mat-error>
       </mat-form-field>
     </div>
-    <mat-form-field class="w-100" appearance="outline">
-      <mat-label>Importe Total:</mat-label>
-      <input matInput formControlName="importe_total" />
-      <mat-error *ngIf="this.importeTotalControl.errors?.required"> {{ 'El importe total es' }} <strong>requerido</strong>  </mat-error>
-    </mat-form-field>
-    <mat-form-field class="w-100" appearance="outline">
-      <mat-label>Descuento:</mat-label>
-      <input matInput formControlName="descuento" />
-    </mat-form-field>
+    <div class="col-lg-4 col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Arancel:</mat-label>
       <input matInput formControlName="arancel" />
     </mat-form-field>
+  </div>
+  <div class="col-lg-4 col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Comentarios:</mat-label>
       <input matInput formControlName="comentarios" />
       <mat-error *ngIf="this.comentariosControl.errors?.required"> {{ 'Los comentarios son' }} <strong>requerido</strong>  </mat-error>
     </mat-form-field>
+  </div>
+  <div class="col-lg-4 col-md-12">
   <!-- Operación COmercial -->
   <div class="mb-4">
     <ng-select
@@ -61,6 +73,8 @@
     <small class="text-danger error-style" *ngIf="operacionControl.errors?.required && operacionControl.dirty">
       El campo operación comercial es <strong>requerido</strong></small>
   </div>
+</div>
+<div class="col-lg-4 col-md-12">
    <!-- Estado -->
    <div class="mb-4">
     <ng-select
@@ -75,6 +89,8 @@
     <small class="text-danger error-style" *ngIf="estadoControl.errors?.required && estadoControl.dirty">
       El campo estado es <strong>requerido</strong></small>
   </div>
+</div>
+<div class="col-lg-4 col-md-12">
      <!-- Comercial -->
      <div class="mb-4">
       <ng-select
@@ -89,6 +105,8 @@
       <small class="text-danger error-style" *ngIf="comercialControl.errors?.required && comercialControl.dirty">
         El campo comercial es <strong>requerido</strong></small>
     </div>
+  </div>
+  <div class="col-lg-4 col-md-12">
   <!-- Venta -->
   <div class="mb-4">
    <ng-select
@@ -103,6 +121,8 @@
    <small class="text-danger error-style" *ngIf="ventaControl.errors?.required && ventaControl.dirty">
      El campo venta es <strong>requerido</strong></small>
  </div>
+</div>
+</div>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
