--- a/src/app/stock-modules/sale/components/sale-form/sale-form.component.html
+++ b/src/app/stock-modules/sale/components/sale-form/sale-form.component.html
@@ -2,16 +2,21 @@
   <h4>{{ data.sale ? 'Editar Venta' : 'Crear Venta' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="saleForm" [formGroup]="saleForm">
+    <div class="row">
+      <div class="col-lg-6 col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Número:</mat-label>
-      <input matInput formControlName="numero" />
+      <input type="number" matInput formControlName="numero" />
       <mat-error *ngIf="this.numeroControl.errors?.required"> {{ 'El número es' }} <strong>requerido</strong>  </mat-error>
    </mat-form-field>
+  </div>
+  <div class="col-lg-6 col-md-12">
    <mat-form-field class="w-100" appearance="outline">
     <mat-label>Número Control:</mat-label>
-    <input matInput formControlName="nro_control" />
+    <input type="number" matInput formControlName="nro_control" />
     <mat-error *ngIf="this.nro_controlControl.errors?.required"> {{ 'El número de control es' }} <strong>requerido</strong>  </mat-error>
   </mat-form-field>
+</div>
     <div class="col-lg-6 col-md-12">
       <mat-form-field class="w-100" appearance="outline">
         <mat-label>Fecha</mat-label>
@@ -23,13 +28,16 @@
         </mat-error>
       </mat-form-field>
     </div>
+    <div class="col-lg-6 col-md-12">
     <mat-form-field class="w-100" appearance="outline">
       <mat-label>Comentario:</mat-label>
-      <input matInput formControlName="comentarios" />
+      <input matInput formControlName="comentario" />
       <mat-error *ngIf="this.comentarioControl.errors?.required"> {{ 'Los comentarios son' }} <strong>requerido</strong>  </mat-error>
     </mat-form-field>
+  </div>
+  <div class="col-lg-6 col-md-12">
   <!-- Almacén -->
-  <div class="mb-4">
+  <div class="mb-1 w-100">
     <ng-select
       appearance="outline"
       class="custom w-100"
@@ -42,8 +50,10 @@
     <small class="text-danger error-style" *ngIf="almacenControl.errors?.required && almacenControl.dirty">
       El campo almacen es <strong>requerido</strong></small>
   </div>
+  </div>
+  <div class="col-lg-6 col-md-12">
    <!-- Estado -->
-   <div class="mb-4">
+   <div class="mb-1 w-100">
     <ng-select
       appearance="outline"
       class="custom w-100"
@@ -56,8 +66,10 @@
     <small class="text-danger error-style" *ngIf="estadoControl.errors?.required && estadoControl.dirty">
       El campo estado es <strong>requerido</strong></small>
   </div>
+  </div>
+  <div class="col-lg-6 col-md-12">
      <!-- Usuario -->
-     <div class="mb-4">
+     <div class="mb-1 w-100">
       <ng-select
         appearance="outline"
         class="custom w-100"
@@ -70,8 +82,10 @@
       <small class="text-danger error-style" *ngIf="usuarioControl.errors?.required && usuarioControl.dirty">
         El campo usuario es <strong>requerido</strong></small>
     </div>
+    </div>
+    <div class="col-lg-6 col-md-12">
       <!-- Tipo Movimiento -->
-      <div class="mb-4">
+      <div class="mb-1 w-100">
         <ng-select
           appearance="outline"
           class="custom w-100"
@@ -84,11 +98,13 @@
         <small class="text-danger error-style" *ngIf="tipo_movControl.errors?.required && tipo_movControl.dirty">
           El campo tipo de movimineto es <strong>requerido</strong></small>
       </div>
+      </div>
+      </div>
   </form>
   <mat-divider class="my-4"></mat-divider>
   <div class="d-flex align-items-center justify-content-end">
     <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
-    <button (click)="onSubmit(saleForm.value)" [disabled]="!saleForm.valid" mat-raised-button color="primary" class="button">
+    <button color="primary" mat-raised-button mat-button [disabled]="!saleForm.valid" (click)="sendData()">
       {{ data.sale ? 'Aceptar' : 'Crear' }}
     </button>
   </div>
