--- a/src/app/stock-modules/stock/pages/stock-page/stock-page.component.html
+++ b/src/app/stock-modules/stock/pages/stock-page/stock-page.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h4>Almacén Caja</h4>
-    <button (click)="createBoxstock()" mat-raised-button color="primary" class="button">Crear Almacén Caja</button>
+    <h4>Almacén</h4>
+    <button (click)="createStock()" mat-raised-button color="primary" class="button">Crear Almacén</button>
   </div>
   <app-custom-table
-    *ngIf="boxstock"
-    [data]="boxstock"
+    *ngIf="stock"
+    [data]="stock"
     [dataCount]="dataCount"
     [displayedColumns]="configuration.displayedColumns"
     [columnsName]="configuration.columnsName"
