--- a/src/app/stock-modules/warehouse-inventory-difference/components/warehouse-inventory-difference-form/warehouse-inventory-difference-form.component.html
+++ b/src/app/stock-modules/warehouse-inventory-difference/components/warehouse-inventory-difference-form/warehouse-inventory-difference-form.component.html
@@ -1,5 +1,5 @@
 <div class="form">
-    <h4>{{ data.warehouseInventoryDifference ? 'Editar Almacen de Inventario Diferencia' : 'Crear Almacen de Inventario
+    <h4>{{ data.conteo ? 'Editar Almacen de Inventario Diferencia' : 'Crear Almacen de Inventario
         Diferencia' }}</h4>
     <form *ngIf="warehouseInventoryDifferenceForm" [formGroup]="warehouseInventoryDifferenceForm">
 
@@ -14,8 +14,8 @@
         </mat-form-field>
 
         <div class="mb-4">
-            <ng-select appearance="outline" class="custom w-100" placeholder="Conteo" [items]="conteo"
-                bindLabel="descripcion" bindValue="id" formControlName="conteo">
+            <ng-select appearance="outline" class="custom w-100" placeholder="Conteo" [items]="conteo" bindLabel="id"
+                bindValue="id" formControlName="conteo">
             </ng-select>
             <small class="text-danger error-style" *ngIf="conteoControl.errors?.required && conteoControl.dirty">
                 El campo conteo es <strong>requerido</strong></small>
@@ -27,7 +27,7 @@
         <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
         <button (click)="onSubmit(warehouseInventoryDifferenceForm.value)"
             [disabled]="!warehouseInventoryDifferenceForm.valid" mat-raised-button color="primary" class="button">
-            {{ data.warehouseInventoryDifference ? 'Aceptar' : 'Crear' }}
+            {{ data.conteo ? 'Aceptar' : 'Crear' }}
         </button>
     </div>
 </div>
