Arreglando errores en el Modulo de transferencias recibidas

--- a/src/app/stock-modules/transfer-emited-stock/components/transfer-emited-stock-form/transfer-emited-stock-form.component.html
+++ b/src/app/stock-modules/transfer-emited-stock/components/transfer-emited-stock-form/transfer-emited-stock-form.component.html
@@ -1,5 +1,5 @@
 <div class="form">
-  <h4>{{ data.transferEmited ? 'Editar Transferencia recibida' : 'Crear Transferencia recibida' }}</h4>
+  <h4>{{ data.transferEmited ? 'Editar Transferencia emitida' : 'Crear Transferencia emitida' }}</h4>
   <mat-divider class="my-4"></mat-divider>
   <form *ngIf="tranferEmitedForm" [formGroup]="tranferEmitedForm">
     <div class="row">
