--- a/src/app/stock-modules/transfer-emited-stock/pages/transfer-emited-stock-page/transfer-emited-stock-page.component.html
+++ b/src/app/stock-modules/transfer-emited-stock/pages/transfer-emited-stock-page/transfer-emited-stock-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h4>Transacción Emitida</h4>
-    <!-- <button (click)="createRecivedTransfer()" mat-raised-button color="primary" class="button">Crear Transacción Recibida</button> -->
+    <button (click)="createEmitedTransfer()" mat-raised-button color="primary" class="button">Crear Transacción Recibida</button>
   </div>
   <app-custom-table
     *ngIf="emitedTransfers"
