--- a/src/app/stock-modules/warehouse-received-transfer/components/warehouse-received-transfer-form/warehouse-received-transfer-form.component.html
+++ b/src/app/stock-modules/warehouse-received-transfer/components/warehouse-received-transfer-form/warehouse-received-transfer-form.component.html
@@ -1,33 +1,98 @@
 <div class="form">
-    <h4>{{ data.warehouseReceivedTransfer ? 'Editar Transferencia' : 'Crear Transferencia' }}</h4>
-    <mat-divider class="my-4"></mat-divider>
-    <form *ngIf="WarehouseReceivedTransferForm" [formGroup]="WarehouseReceivedTransferForm">
+  <h4>{{ data.warehouseReceivedTransfer ? 'Editar Transferencia Recibida' : 'Crear Transferencia Recibida' }}</h4>
+  <mat-divider class="my-4"></mat-divider>
+  <form *ngIf="WarehouseReceivedTransferForm" [formGroup]="WarehouseReceivedTransferForm">
+    <div class="row">
+      <!-- Fecha  -->
+      <div class="col-lg-6 col-md-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Fecha</mat-label>
+          <input matInput formControlName="fecha" [matDatepicker]="picker" />
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <mat-error *ngIf="fechaControl.errors?.required"> {{ 'La fecha es ' }} <strong>requerida</strong> </mat-error>
+        </mat-form-field>
+      </div>
 
-        <!-- Movimiento -->
-        <div class="mb-4">
-            <ng-select appearance="outline" class="custom w-100" placeholder="Movimiento" [items]="move"
-                bindLabel="comentario" bindValue="id" formControlName="movimiento">
-            </ng-select>
-            <small class="text-danger error-style" *ngIf="movimientoControl.errors?.required">El campo movimiento es
-                <strong>requerido</strong></small>
-        </div>
+      <!-- numero -->
+      <div class="col-lg-6 col-md-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Número:</mat-label>
+          <input type="number" matInput formControlName="numero" />
+          <mat-error *ngIf="numeroControl.errors?.required"> {{ 'El número es' }} <strong>requerido</strong> </mat-error>
+        </mat-form-field>
+      </div>
 
-        <!-- Movimiento origen -->
-        <div class="mb-4">
-            <ng-select appearance="outline" class="custom w-100" placeholder="Movimiento origen" [items]="move"
-                bindLabel="comentario" bindValue="id" formControlName="movimiento_origen">
-            </ng-select>
-            <small class="text-danger error-style" *ngIf="movimiento_origenControl.errors?.required">El campo movimiento
-                origen es
-                <strong>requerido</strong></small>
-        </div>
-    </form>
-    <mat-divider class="my-4"></mat-divider>
-    <div class="d-flex align-items-center justify-content-end">
-        <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
-        <button (click)="onSubmit(WarehouseReceivedTransferForm.value)"
-            [disabled]="!WarehouseReceivedTransferForm.valid" mat-raised-button color="primary" class="button">
-            {{ data.warehouseReceivedTransfer ? 'Aceptar' : 'Crear' }}
-        </button>
+      <!-- comentario -->
+      <div class="col-lg-6 col-md-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Comentario:</mat-label>
+          <input matInput formControlName="comentario" />
+          <mat-error *ngIf="comentarioControl.errors?.required"> {{ 'El comentario es' }} <strong>requerido</strong> </mat-error>
+        </mat-form-field>
+      </div>
+
+      <!-- nro_control -->
+      <div class="col-lg-6 col-md-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Número de Control:</mat-label>
+          <input matInput formControlName="nro_control" />
+          <mat-error *ngIf="nro_controlControl.errors?.required"> {{ 'El número de control es' }} <strong>requerido</strong> </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="col-lg-6 col-md-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Almacén</mat-label>
+          <mat-select #mySelect formControlName="almacen">
+            <mat-option *ngFor="let item of stocks" [value]="item.id">{{ item.nombre }}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="almacenControl.errors?.required"> {{ 'Seleccione un Almacén' }} </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="col-lg-6 col-md-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Estado</mat-label>
+          <mat-select #mySelect formControlName="estado">
+            <mat-option *ngFor="let item of statuses" [value]="item.id">{{ item.descripcion }}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="estadoControl.errors?.required"> {{ 'Seleccione un estado' }} </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="col-lg-6 col-md-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Tipo de movimiento</mat-label>
+          <mat-select #mySelect formControlName="tipo_de_movimiento">
+            <mat-option *ngFor="let item of moveTypes" [value]="item.id">{{ item.descripcion }}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="tipo_de_movimientoControl.errors?.required"> {{ 'Seleccione un tipo de movimiento' }} </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="col-lg-6 col-md-12">
+        <mat-form-field class="w-100" appearance="outline">
+          <mat-label>Usuario</mat-label>
+          <mat-select #mySelect formControlName="usuario">
+            <mat-option *ngFor="let item of users" [value]="item.id">{{ item.first_name + ' ' + item.last_name }}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="usuarioControl.errors?.required"> {{ 'Seleccione un tipo de movimiento' }} </mat-error>
+        </mat-form-field>
+      </div>
     </div>
+  </form>
+  <mat-divider class="my-4"></mat-divider>
+  <div class="d-flex align-items-center justify-content-end">
+    <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
+    <button
+      (click)="onSubmit(WarehouseReceivedTransferForm.value)"
+      [disabled]="!WarehouseReceivedTransferForm.valid"
+      mat-raised-button
+      color="primary"
+      class="button"
+    >
+      {{ data.warehouseReceivedTransfer ? 'Aceptar' : 'Crear' }}
+    </button>
+  </div>
 </div>
